@@ -1,4 +1,4 @@
-# Possible Mods are Alt, CtrlAlt, ShftAlt, Super, ShftSuper, CtrlSuper, ALTSuper
+# Possible Mods are Alt, Control, CtrlAlt, ShftAlt, Super, ShftSuper, CtrlSuper, ALTSuper
 #
 # Set external commands ; use with spawn
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
