@@ -1,4 +1,7 @@
 30/11/12
+  Added Control to keyboard mods
+
+30/11/12
   Fix for swapping master with no open windows crash
 
 27/11/18
